# pypurple

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  autogen.sh  cfg  configure  configure.ac  configure.scan
m4/: AX_PYTHON30_DEVEL.m4  libpurple_devel.m4
src/: Makefile  Makefile.am  Makefile.in  config.h.in  lopl-cfiet-pypurple.c  lopl-cfiet-python.c  pyplug.c  pyplug.h  pyprpl-module.c  pyprpl-module.h  pyprpl-util.c  pyprpl-util.h
src/pyplug/: Makefile.am  Makefile.in  pyplug.c  pyplug.h
test/: Makefile.am  Makefile.in  run-test.sh  test-pyplug-python.c  test-pyplug.c  test.h
